parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> funclist
Rule 3     program -> epsilon
Rule 4     funclist -> funcdef funclistaux
Rule 5     funclistaux -> funclist
Rule 6     funclistaux -> epsilon
Rule 7     funcdef -> DEF IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE
Rule 8     paramlist -> type IDENT paramlistaux
Rule 9     paramlist -> epsilon
Rule 10    paramlistaux -> COLON paramlist
Rule 11    paramlistaux -> epsilon
Rule 12    statelist -> statement statelistaux
Rule 13    statelistaux -> statelist
Rule 14    statelistaux -> epsilon
Rule 15    statement -> vardecl SEMICOLON
Rule 16    statement -> atribstat SEMICOLON
Rule 17    statement -> printstat SEMICOLON
Rule 18    statement -> readstat SEMICOLON
Rule 19    statement -> returnstat SEMICOLON
Rule 20    statement -> ifstat
Rule 21    statement -> forstat
Rule 22    statement -> LBRACE statelist RBRACE
Rule 23    statement -> BREAK SEMICOLON
Rule 24    statement -> SEMICOLON
Rule 25    forstat -> FOR LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN
Rule 26    ifstat -> IF LPAREN expression RPAREN statement ifstataux
Rule 27    ifstataux -> ELSE statement
Rule 28    ifstataux -> epsilon
Rule 29    returnstat -> RETURN
Rule 30    printstat -> PRINT expression
Rule 31    readstat -> READ expression
Rule 32    atribstat -> lvalue EQUAL atribstat2
Rule 33    atribstat2 -> expression
Rule 34    atribstat2 -> allocexpression
Rule 35    atribstat2 -> funccall
Rule 36    funccall -> IDENT LPAREN paramlistcall RPAREN
Rule 37    paramlistcall -> IDENT paramlistcallaux
Rule 38    paramlistcall -> epsilon
Rule 39    paramlistcallaux -> COLON paramlistcall
Rule 40    paramlistcallaux -> epsilon
Rule 41    allocexpression -> NEW type numexpressionvectoraux
Rule 42    expression -> numexpression expressionaux
Rule 43    expressionaux -> COMPARISON numexpression
Rule 44    expressionaux -> epsilon
Rule 45    numexpressionvector -> LBRACKET numexpression RBRACKET numexpressionvectoraux
Rule 46    numexpressionvectoraux -> numexpressionvector
Rule 47    numexpressionvectoraux -> epsilon
Rule 48    numexpression -> term numexpressionaux
Rule 49    numexpressionaux -> numexpression2
Rule 50    numexpressionaux -> epsilon
Rule 51    numexpression2 -> SIGNAL term numexpressionaux
Rule 52    term -> unaryexpr termaux
Rule 53    termaux -> term2
Rule 54    termaux -> epsilon
Rule 55    term2 -> MATH unaryexpr termaux
Rule 56    unaryexpr -> SIGNAL factor
Rule 57    unaryexpr -> factor
Rule 58    factor -> INTCONST
Rule 59    factor -> STRINGCONST
Rule 60    factor -> FLOATCONST
Rule 61    factor -> NULL
Rule 62    factor -> lvalue
Rule 63    factor -> LPAREN numexpression RPAREN
Rule 64    lvalue -> IDENT numexpressionvectoraux
Rule 65    vardecl -> type IDENT vardeclaux
Rule 66    vardeclaux -> vardecl2
Rule 67    vardeclaux -> epsilon
Rule 68    vardecl2 -> LBRACKET INTCONST RBRACKET vardeclaux
Rule 69    type -> INT typeaux
Rule 70    type -> FLOAT typeaux
Rule 71    type -> STRING typeaux
Rule 72    typeaux -> type2
Rule 73    typeaux -> epsilon
Rule 74    type2 -> LBRACKET RBRACKET typeaux
Rule 75    epsilon -> <empty>

Terminals, with rules where they appear

BREAK                : 23
COLON                : 10 39
COMPARISON           : 43
DEF                  : 7
ELSE                 : 27
EQUAL                : 32
FLOAT                : 70
FLOATCONST           : 60
FOR                  : 25
IDENT                : 7 8 36 37 64 65
IF                   : 26
INT                  : 69
INTCONST             : 58 68
LBRACE               : 7 22
LBRACKET             : 45 68 74
LPAREN               : 7 25 26 36 63
MATH                 : 55
NEW                  : 41
NULL                 : 61
PRINT                : 30
RBRACE               : 7 22
RBRACKET             : 45 68 74
READ                 : 31
RETURN               : 29
RPAREN               : 7 25 26 36 63
SEMICOLON            : 15 16 17 18 19 23 24 25 25
SIGNAL               : 51 56
STRING               : 71
STRINGCONST          : 59
error                : 

Nonterminals, with rules where they appear

allocexpression      : 34
atribstat            : 16 25 25
atribstat2           : 32
epsilon              : 3 6 9 11 14 28 38 40 44 47 50 54 67 73
expression           : 25 26 30 31 33
expressionaux        : 42
factor               : 56 57
forstat              : 21
funccall             : 35
funcdef              : 4
funclist             : 2 5
funclistaux          : 4
ifstat               : 20
ifstataux            : 26
lvalue               : 32 62
numexpression        : 42 43 45 63
numexpression2       : 49
numexpressionaux     : 48 51
numexpressionvector  : 46
numexpressionvectoraux : 41 45 64
paramlist            : 7 10
paramlistaux         : 8
paramlistcall        : 36 39
paramlistcallaux     : 37
printstat            : 17
program              : 0
readstat             : 18
returnstat           : 19
statelist            : 7 13 22
statelistaux         : 12
statement            : 1 12 26 27
term                 : 48 51
term2                : 53
termaux              : 52 55
type                 : 8 41 65
type2                : 72
typeaux              : 69 70 71 74
unaryexpr            : 52 55
vardecl              : 15
vardecl2             : 66
vardeclaux           : 65 68

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . funclist
    (3) program -> . epsilon
    (15) statement -> . vardecl SEMICOLON
    (16) statement -> . atribstat SEMICOLON
    (17) statement -> . printstat SEMICOLON
    (18) statement -> . readstat SEMICOLON
    (19) statement -> . returnstat SEMICOLON
    (20) statement -> . ifstat
    (21) statement -> . forstat
    (22) statement -> . LBRACE statelist RBRACE
    (23) statement -> . BREAK SEMICOLON
    (24) statement -> . SEMICOLON
    (4) funclist -> . funcdef funclistaux
    (75) epsilon -> .
    (65) vardecl -> . type IDENT vardeclaux
    (32) atribstat -> . lvalue EQUAL atribstat2
    (30) printstat -> . PRINT expression
    (31) readstat -> . READ expression
    (29) returnstat -> . RETURN
    (26) ifstat -> . IF LPAREN expression RPAREN statement ifstataux
    (25) forstat -> . FOR LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN
    (7) funcdef -> . DEF IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE
    (69) type -> . INT typeaux
    (70) type -> . FLOAT typeaux
    (71) type -> . STRING typeaux
    (64) lvalue -> . IDENT numexpressionvectoraux

    LBRACE          shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    $end            reduce using rule 75 (epsilon -> .)
    PRINT           shift and go to state 19
    READ            shift and go to state 20
    RETURN          shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 23
    DEF             shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 27
    IDENT           shift and go to state 17

    program                        shift and go to state 1
    statement                      shift and go to state 2
    funclist                       shift and go to state 3
    epsilon                        shift and go to state 4
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    funcdef                        shift and go to state 15
    type                           shift and go to state 16
    lvalue                         shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 3

    (2) program -> funclist .

    $end            reduce using rule 2 (program -> funclist .)


state 4

    (3) program -> epsilon .

    $end            reduce using rule 3 (program -> epsilon .)


state 5

    (15) statement -> vardecl . SEMICOLON

    SEMICOLON       shift and go to state 28


state 6

    (24) statement -> SEMICOLON .

    $end            reduce using rule 24 (statement -> SEMICOLON .)
    LBRACE          reduce using rule 24 (statement -> SEMICOLON .)
    BREAK           reduce using rule 24 (statement -> SEMICOLON .)
    SEMICOLON       reduce using rule 24 (statement -> SEMICOLON .)
    PRINT           reduce using rule 24 (statement -> SEMICOLON .)
    READ            reduce using rule 24 (statement -> SEMICOLON .)
    RETURN          reduce using rule 24 (statement -> SEMICOLON .)
    IF              reduce using rule 24 (statement -> SEMICOLON .)
    FOR             reduce using rule 24 (statement -> SEMICOLON .)
    INT             reduce using rule 24 (statement -> SEMICOLON .)
    FLOAT           reduce using rule 24 (statement -> SEMICOLON .)
    STRING          reduce using rule 24 (statement -> SEMICOLON .)
    IDENT           reduce using rule 24 (statement -> SEMICOLON .)
    RBRACE          reduce using rule 24 (statement -> SEMICOLON .)
    ELSE            reduce using rule 24 (statement -> SEMICOLON .)


state 7

    (16) statement -> atribstat . SEMICOLON

    SEMICOLON       shift and go to state 29


state 8

    (17) statement -> printstat . SEMICOLON

    SEMICOLON       shift and go to state 30


state 9

    (18) statement -> readstat . SEMICOLON

    SEMICOLON       shift and go to state 31


state 10

    (19) statement -> returnstat . SEMICOLON

    SEMICOLON       shift and go to state 32


state 11

    (20) statement -> ifstat .

    $end            reduce using rule 20 (statement -> ifstat .)
    LBRACE          reduce using rule 20 (statement -> ifstat .)
    BREAK           reduce using rule 20 (statement -> ifstat .)
    SEMICOLON       reduce using rule 20 (statement -> ifstat .)
    PRINT           reduce using rule 20 (statement -> ifstat .)
    READ            reduce using rule 20 (statement -> ifstat .)
    RETURN          reduce using rule 20 (statement -> ifstat .)
    IF              reduce using rule 20 (statement -> ifstat .)
    FOR             reduce using rule 20 (statement -> ifstat .)
    INT             reduce using rule 20 (statement -> ifstat .)
    FLOAT           reduce using rule 20 (statement -> ifstat .)
    STRING          reduce using rule 20 (statement -> ifstat .)
    IDENT           reduce using rule 20 (statement -> ifstat .)
    RBRACE          reduce using rule 20 (statement -> ifstat .)
    ELSE            reduce using rule 20 (statement -> ifstat .)


state 12

    (21) statement -> forstat .

    $end            reduce using rule 21 (statement -> forstat .)
    LBRACE          reduce using rule 21 (statement -> forstat .)
    BREAK           reduce using rule 21 (statement -> forstat .)
    SEMICOLON       reduce using rule 21 (statement -> forstat .)
    PRINT           reduce using rule 21 (statement -> forstat .)
    READ            reduce using rule 21 (statement -> forstat .)
    RETURN          reduce using rule 21 (statement -> forstat .)
    IF              reduce using rule 21 (statement -> forstat .)
    FOR             reduce using rule 21 (statement -> forstat .)
    INT             reduce using rule 21 (statement -> forstat .)
    FLOAT           reduce using rule 21 (statement -> forstat .)
    STRING          reduce using rule 21 (statement -> forstat .)
    IDENT           reduce using rule 21 (statement -> forstat .)
    RBRACE          reduce using rule 21 (statement -> forstat .)
    ELSE            reduce using rule 21 (statement -> forstat .)


state 13

    (22) statement -> LBRACE . statelist RBRACE
    (12) statelist -> . statement statelistaux
    (15) statement -> . vardecl SEMICOLON
    (16) statement -> . atribstat SEMICOLON
    (17) statement -> . printstat SEMICOLON
    (18) statement -> . readstat SEMICOLON
    (19) statement -> . returnstat SEMICOLON
    (20) statement -> . ifstat
    (21) statement -> . forstat
    (22) statement -> . LBRACE statelist RBRACE
    (23) statement -> . BREAK SEMICOLON
    (24) statement -> . SEMICOLON
    (65) vardecl -> . type IDENT vardeclaux
    (32) atribstat -> . lvalue EQUAL atribstat2
    (30) printstat -> . PRINT expression
    (31) readstat -> . READ expression
    (29) returnstat -> . RETURN
    (26) ifstat -> . IF LPAREN expression RPAREN statement ifstataux
    (25) forstat -> . FOR LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN
    (69) type -> . INT typeaux
    (70) type -> . FLOAT typeaux
    (71) type -> . STRING typeaux
    (64) lvalue -> . IDENT numexpressionvectoraux

    LBRACE          shift and go to state 13
    BREAK           shift and go to state 14
    SEMICOLON       shift and go to state 6
    PRINT           shift and go to state 19
    READ            shift and go to state 20
    RETURN          shift and go to state 21
    IF              shift and go to state 22
    FOR             shift and go to state 23
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    STRING          shift and go to state 27
    IDENT           shift and go to state 17

    statelist                      shift and go to state 33
    statement                      shift and go to state 34
    vardecl                        shift and go to state 5
    atribstat                      shift and go to state 7
    printstat                      shift and go to state 8
    readstat                       shift and go to state 9
    returnstat                     shift and go to state 10
    ifstat                         shift and go to state 11
    forstat                        shift and go to state 12
    type                           shift and go to state 16
    lvalue                         shift and go to state 18

state 14

    (23) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 35


state 15

    (4) funclist -> funcdef . funclistaux
    (5) funclistaux -> . funclist
    (6) funclistaux -> . epsilon
    (4) funclist -> . funcdef funclistaux
    (75) epsilon -> .
    (7) funcdef -> . DEF IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE

    $end            reduce using rule 75 (epsilon -> .)
    DEF             shift and go to state 24

    funcdef                        shift and go to state 15
    funclistaux                    shift and go to state 36
    funclist                       shift and go to state 37
    epsilon                        shift and go to state 38

state 16

    (65) vardecl -> type . IDENT vardeclaux

    IDENT           shift and go to state 39


state 17

    (64) lvalue -> IDENT . numexpressionvectoraux
    (46) numexpressionvectoraux -> . numexpressionvector
    (47) numexpressionvectoraux -> . epsilon
    (45) numexpressionvector -> . LBRACKET numexpression RBRACKET numexpressionvectoraux
    (75) epsilon -> .

    LBRACKET        shift and go to state 43
    EQUAL           reduce using rule 75 (epsilon -> .)
    MATH            reduce using rule 75 (epsilon -> .)
    SIGNAL          reduce using rule 75 (epsilon -> .)
    COMPARISON      reduce using rule 75 (epsilon -> .)
    SEMICOLON       reduce using rule 75 (epsilon -> .)
    RBRACKET        reduce using rule 75 (epsilon -> .)
    RPAREN          reduce using rule 75 (epsilon -> .)

    numexpressionvectoraux         shift and go to state 40
    numexpressionvector            shift and go to state 41
    epsilon                        shift and go to state 42

state 18

    (32) atribstat -> lvalue . EQUAL atribstat2

    EQUAL           shift and go to state 44


state 19

    (30) printstat -> PRINT . expression
    (42) expression -> . numexpression expressionaux
    (48) numexpression -> . term numexpressionaux
    (52) term -> . unaryexpr termaux
    (56) unaryexpr -> . SIGNAL factor
    (57) unaryexpr -> . factor
    (58) factor -> . INTCONST
    (59) factor -> . STRINGCONST
    (60) factor -> . FLOATCONST
    (61) factor -> . NULL
    (62) factor -> . lvalue
    (63) factor -> . LPAREN numexpression RPAREN
    (64) lvalue -> . IDENT numexpressionvectoraux

    SIGNAL          shift and go to state 49
    INTCONST        shift and go to state 51
    STRINGCONST     shift and go to state 52
    FLOATCONST      shift and go to state 53
    NULL            shift and go to state 54
    LPAREN          shift and go to state 56
    IDENT           shift and go to state 17

    expression                     shift and go to state 45
    numexpression                  shift and go to state 46
    term                           shift and go to state 47
    unaryexpr                      shift and go to state 48
    factor                         shift and go to state 50
    lvalue                         shift and go to state 55

state 20

    (31) readstat -> READ . expression
    (42) expression -> . numexpression expressionaux
    (48) numexpression -> . term numexpressionaux
    (52) term -> . unaryexpr termaux
    (56) unaryexpr -> . SIGNAL factor
    (57) unaryexpr -> . factor
    (58) factor -> . INTCONST
    (59) factor -> . STRINGCONST
    (60) factor -> . FLOATCONST
    (61) factor -> . NULL
    (62) factor -> . lvalue
    (63) factor -> . LPAREN numexpression RPAREN
    (64) lvalue -> . IDENT numexpressionvectoraux

    SIGNAL          shift and go to state 49
    INTCONST        shift and go to state 51
    STRINGCONST     shift and go to state 52
    FLOATCONST      shift and go to state 53
    NULL            shift and go to state 54
    LPAREN          shift and go to state 56
    IDENT           shift and go to state 17

    expression                     shift and go to state 57
    numexpression                  shift and go to state 46
    term                           shift and go to state 47
    unaryexpr                      shift and go to state 48
    factor                         shift and go to state 50
    lvalue                         shift and go to state 55

state 21

    (29) returnstat -> RETURN .

    SEMICOLON       reduce using rule 29 (returnstat -> RETURN .)


state 22

    (26) ifstat -> IF . LPAREN expression RPAREN statement ifstataux

    LPAREN          shift and go to state 58


state 23

    (25) forstat -> FOR . LPAREN atribstat SEMICOLON expression SEMICOLON atribstat RPAREN

    LPAREN          shift and go to state 59


state 24

    (7) funcdef -> DEF . IDENT LPAREN paramlist RPAREN LBRACE statelist RBRACE

    IDENT           shift and go to state 60


state 25

    (69) type -> INT . typeaux
    (72) typeaux -> . type2
    (73) typeaux -> . epsilon
    (74) type2 -> . LBRACKET RBRACKET typeaux
    (75) epsilon -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 64
    IDENT           reduce using rule 75 (epsilon -> .)
    SEMICOLON       reduce using rule 75 (epsilon -> .)
    RPAREN          reduce using rule 75 (epsilon -> .)

  ! LBRACKET        [ reduce using rule 75 (epsilon -> .) ]

    typeaux                        shift and go to state 61
    type2                          shift and go to state 62
    epsilon                        shift and go to state 63

state 26

    (70) type -> FLOAT . typeaux
    (72) typeaux -> . type2
    (73) typeaux -> . epsilon
    (74) type2 -> . LBRACKET RBRACKET typeaux
    (75) epsilon -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 64
    IDENT           reduce using rule 75 (epsilon -> .)
    SEMICOLON       reduce using rule 75 (epsilon -> .)
    RPAREN          reduce using rule 75 (epsilon -> .)

  ! LBRACKET        [ reduce using rule 75 (epsilon -> .) ]

    typeaux                        shift and go to state 65
    type2                          shift and go to state 62
    epsilon                        shift and go to state 63

state 27

    (71) type -> STRING . typeaux
    (72) typeaux -> . type2
    (73) typeaux -> . epsilon
    (74) type2 -> . LBRACKET RBRACKET typeaux
    (75) epsilon -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 64
    IDENT           reduce using rule 75 (epsilon -> .)
    SEMICOLON       reduce using rule 75 (epsilon -> .)
    RPAREN          reduce using rule 75 (epsilon -> .)

  ! LBRACKET        [ reduce using rule 75 (epsilon -> .) ]

    typeaux                        shift and go to state 66
    type2                          shift and go to state 62
    epsilon                        shift and go to state 63

state 28

    (15) statement -> vardecl SEMICOLON .

    $end            reduce using rule 15 (statement -> vardecl SEMICOLON .)
    LBRACE          reduce using rule 15 (statement -> vardecl SEMICOLON .)
    BREAK           reduce using rule 15 (statement -> vardecl SEMICOLON .)
    SEMICOLON       reduce using rule 15 (statement -> vardecl SEMICOLON .)
    PRINT           reduce using rule 15 (statement -> vardecl SEMICOLON .)
    READ            reduce using rule 15 (statement -> vardecl SEMICOLON .)
    RETURN          reduce using rule 15 (statement -> vardecl SEMICOLON .)
    IF              reduce using rule 15 (statement -> vardecl SEMICOLON .)
    FOR             reduce using rule 15 (statement -> vardecl SEMICOLON .)
    INT             reduce using rule 15 (statement -> vardecl SEMICOLON .)
    FLOAT           reduce using rule 15 (statement -> vardecl SEMICOLON .)
    STRING          reduce using rule 15 (statement -> vardecl SEMICOLON .)
    IDENT           reduce using rule 15 (statement -> vardecl SEMICOLON .)
    RBRACE          reduce using rule 15 (statement -> vardecl SEMICOLON .)
    ELSE            reduce using rule 15 (statement -> vardecl SEMICOLON .)


state 29

    (16) statement -> atribstat SEMICOLON .

    $end            reduce using rule 16 (statement -> atribstat SEMICOLON .)
    LBRACE          reduce using rule 16 (statement -> atribstat SEMICOLON .)
    BREAK           reduce using rule 16 (statement -> atribstat SEMICOLON .)
    SEMICOLON       reduce using rule 16 (statement -> atribstat SEMICOLON .)
    PRINT           reduce using rule 16 (statement -> atribstat SEMICOLON .)
    READ            reduce using rule 16 (statement -> atribstat SEMICOLON .)
    RETURN          reduce using rule 16 (statement -> atribstat SEMICOLON .)
    IF              reduce using rule 16 (statement -> atribstat SEMICOLON .)
    FOR             reduce using rule 16 (statement -> atribstat SEMICOLON .)
    INT             reduce using rule 16 (statement -> atribstat SEMICOLON .)
    FLOAT           reduce using rule 16 (statement -> atribstat SEMICOLON .)
    STRING          reduce using rule 16 (statement -> atribstat SEMICOLON .)
    IDENT           reduce using rule 16 (statement -> atribstat SEMICOLON .)
    RBRACE          reduce using rule 16 (statement -> atribstat SEMICOLON .)
    ELSE            reduce using rule 16 (statement -> atribstat SEMICOLON .)


state 30

    (17) statement -> printstat SEMICOLON .

    $end            reduce using rule 17 (statement -> printstat SEMICOLON .)
    LBRACE          reduce using rule 17 (statement -> printstat SEMICOLON .)
    BREAK           reduce using rule 17 (statement -> printstat SEMICOLON .)
    SEMICOLON       reduce using rule 17 (statement -> printstat SEMICOLON .)
    PRINT           reduce using rule 17 (statement -> printstat SEMICOLON .)
    READ            reduce using rule 17 (statement -> printstat SEMICOLON .)
    RETURN          reduce using rule 17 (statement -> printstat SEMICOLON .)
    IF              reduce using rule 17 (statement -> printstat SEMICOLON .)
    FOR             reduce using rule 17 (statement -> printstat SEMICOLON .)
    INT             reduce using rule 17 (statement -> printstat SEMICOLON .)
    FLOAT           reduce using rule 17 (statement -> printstat SEMICOLON .)
    STRING          reduce using rule 17 (statement -> printstat SEMICOLON .)
    IDENT           reduce using rule 17 (statement -> printstat SEMICOLON .)
    RBRACE          reduce using rule 17 (statement -> printstat SEMICOLON .)
    ELSE            reduce using rule 17 (statement -> printstat SEMICOLON .)


state 31

    (18) statement -> readstat SEMICOLON .

    $end            reduce using rule 18 (statement -> readstat SEMICOLON .)
    LBRACE          reduce using rule 18 (statement -> readstat SEMICOLON .)
    BREAK           reduce using rule 18 (statement -> readstat SEMICOLON .)
    SEMICOLON       reduce using rule 18 (statement -> readstat SEMICOLON .)
    PRINT           reduce using rule 18 (statement -> readstat SEMICOLON .)
    READ            reduce using rule 18 (statement -> readstat SEMICOLON .)
    RETURN          reduce using rule 18 (statement -> readstat SEMICOLON .)
    IF              reduce using rule 18 (statement -> readstat SEMICOLON .)
    FOR             reduce using rule 18 (statement -> readstat SEMICOLON .)
    INT             reduce using rule 18 (statement -> readstat SEMICOLON .)
    FLOAT           reduce using rule 18 (statement -> readstat SEMICOLON .)
    STRING          reduce using rule 18 (statement -> readstat SEMICOLON .)
    IDENT           reduce using rule 18 (statement -> readstat SEMICOLON .)
    RBRACE          reduce using rule 18 (statement -> readstat SEMICOLON .)
    ELSE            reduce using rule 18 (statement -> readstat SEMICOLON .)


state 32

    (19) statement -> returnstat SEMICOLON .

    $end            reduce using rule 19 (statement -> returnstat SEMICOLON .)
    LBRACE          reduce using rule 19 (statement -> returnstat SEMICOLON .)
    BREAK           reduce using rule 19 (statement -> returnstat SEMICOLON .)
    SEMICOLON       reduce using rule 19 (statement -> returnstat SEMICOLON .)
    PRINT           reduce using rule 19 (statement -> returnstat SEMICOLON .)
    READ            reduce using rule 19 (statement -> returnstat SEMICOLON .)
    RETURN          reduce using rule 19 (statement -> returnstat SEMICOLON .)
    IF              reduce using rule 19 (statement -> returnstat SEMICOLON .)
    FOR             reduce using rule 19 (statement -> returnstat SEMICOLON .)
    INT             reduce using rule 19 (statement -> returnstat SEMICOLON .)
    FLOAT           reduce using rule 19 (statement -> returnstat SEMICOLON .)
    STRING          reduce using rule 19 (statement -> returnstat SEMICOLON .)
    IDENT           reduce using rule 19 (statement -> returnstat SEMICOLON .)
    RBRACE          reduce using rule 19 (statement -> returnstat SEMICOLON .)
    ELSE            reduce using rule 19 (statement -> returnstat SEMICOLON .)


state 33

    (22) statement -> LBRACE statelist . RBRACE

    RBRACE          shift and go to state 67


state 34
